fixed off center rules

--- a/public/cdn/css/tmg-main.css
+++ b/public/cdn/css/tmg-main.css
@@ -80,7 +80,7 @@ body .tmg-popup-container { display:none; margin-top:0px; height:0px; margin-lef
 
 .navbar-inverse { background-image:none; }
 .body-home .footer { display:none; }
-.body-home #tmg-container { position:fixed; width:100%; height:100%; }
+.body-home #tmg-container { position:fixed; width:100% !important; height:100%; }
 .body-work .footer { margin-top:100px; }
 .body-work-single .footer { margin-top:0px; }
 
